--- a/LinkedIn.Api2/LinkedIn.Api2.csproj
+++ b/LinkedIn.Api2/LinkedIn.Api2.csproj
@@ -8,10 +8,12 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/obarlik/LinkedIn.Api2/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/obarlik/LinkedIn.Api2</PackageProjectUrl>
     <RepositoryUrl>https://github.com/obarlik/LinkedIn.Api2</RepositoryUrl>
-    <AssemblyVersion>1.0.2.2</AssemblyVersion>
-    <Version>1.0.2</Version>
+    <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <Version>1.0.3</Version>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <FileVersion>1.0.2.2</FileVersion>
+    <FileVersion>1.0.3.0</FileVersion>
+    <Description>LinkedIn API v2 Authentication</Description>
+    <PackageTags>linkedin authentication</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
